fix(home): change spacing on home header

--- a/frontend/src/views/Home/style.scss
+++ b/frontend/src/views/Home/style.scss
@@ -10,7 +10,7 @@
 }
 
 .home-header-center {
-  padding-top: 40%;
+  padding-top: 20%;
   margin-left: 20%;
   color: $primary-text-color;
 
